fix: align, fonts and icons

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,14 @@
 
 /* mobile mode */
 
-.fa-briefcase {
+.title {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fa-briefcase, .fa-house-user  {
   color: white !important;
 }
 
@@ -20,6 +27,7 @@
 
 .header {
   padding: 20px 10px;
+  align-items: center
 }
 
 .header a {
@@ -71,6 +79,11 @@ h1, h2 {
   color: lightgray; 
 }
 
+h1, h2 {
+  display: flex;
+  justify-content: center;
+}
+
 h4 {
   font-weight: 700;
   margin-bottom: 1rem;
@@ -91,6 +104,9 @@ margin-top: 30px;
 height: 50px;
 width: 300px;
 opacity: 0.7;
+display: flex;
+align-items: center;
+justify-content: center;
 
 }
 
@@ -312,11 +328,6 @@ min-width: 30%;
   .fa {
     display: inline-block;
     font-size: 38px !important;
-  }
-  /* Estilo do dropdown */
-  .header .dropdown {
-    display: none; /* Esconde o dropdown */
-    flex-direction: column; /* Coloca os itens do menu em coluna */
   }
   h2 {
     margin-top: 3rem;
